--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <style>
         .jumbotron{
-            background-image: url("dee-copper-and-wild-UyVALppfBJU-unsplash.jpg");
+            background-image: url("");
             background-position: center;
         }
     </style>
-    <title>Cakelicious</title>
+    <title>Deepakshi's Resume</title>
   </head>
   <body>
     <nav class="navbar navbar-light" style="background: rgb(255, 169, 183);">
         <div class="container">
-            <a href="#" class="navbar-brand"><i class="fas fa-birthday-cake mr-2"></i>Cakelicious</a>
+            <a href="#" class="navbar-brand"><i class="fas fa-birthday-cake mr-2"></i>Home</a>
         </div>
     </nav>
     <section id="Header" class="jumbotron text-center">
-        <h1 class="display-4">Cakes For Everyone!</h1>
+        <h1 class="display-4">Hello There!</h1>
         <p class="lead">
-            We provide best custom cakes in the town. Select from our new collection!
+            My name is Deepakshi. I am a Electronics and Computer Emgineering Student. I like working on Frontend projects and Data Analysis.
+            This is a collection of all my projects. Feel free to look around and support my work if you like. You can always find me on LinkedIn. 
         </p>
         <a href="#" class="btn" style="background:  rgb(255, 169, 183);">Get started</a>
     </section>
@@ -34,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="C:\Users\DELL\Full Stack\Frontend-developement\Cake-websiite\sj-diUixdrqh0Q-unsplash.jpg" style="size: 200px;" alt="">
+                        <img class="card-img-top" src="" style="size: 200px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Chocolate</h5>
                             <p class="card-text">Who doesnt love a good old chocolate cake? 
@@ -48,7 +49,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="C:\Users\DELL\Full Stack\Frontend-developement\Cake-websiite\annie-spratt-6SHd7Q-l1UQ-unsplash.jpg"  style="size: 200px;" alt="">
+                        <img class="card-img-top" src=""  style="size: 200px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Chocolate</h5>
                             <p class="card-text">Who doesnt love a good old chocolate cake? 
@@ -62,7 +63,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="C:\Users\DELL\Full Stack\Frontend-developement\Cake-websiite\neonbrand-CeKaBzyvxxI-unsplash.jpg"  style="size: 200px;"  alt="">
+                        <img class="card-img-top" src=""  style="size: 200px;"  alt="">
                         <div class="card-body">
                             <h5 class="card-title">Chocolate</h5>
                             <p class="card-text">Who doesnt love a good old chocolate cake? 
