--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@
   <body>
     <nav class="navbar navbar-light" style="background: rgb(255, 169, 183);">
         <div class="container">
-            <a href="#" class="navbar-brand"><i class="fas fa-birthday-cake mr-2"></i>Home</a>
+            <a href="#" class="navbar-brand"><i class="fas fa-laptop-code mr-2"></i>Home</a>
         </div>
     </nav>
     <section id="Header" class="jumbotron text-center">
         <h1 class="display-4">Hello There!</h1>
-        <p class="lead">
-            My name is Deepakshi. I am a Electronics and Computer Emgineering Student. I like working on Frontend projects and Data Analysis.
-            This is a collection of all my projects. Feel free to look around and support my work if you like. You can always find me on LinkedIn. 
-        </p>
-        <a href="#" class="btn" style="background:  rgb(255, 169, 183);">Get started</a>
+        <div class="container">
+            <p class="lead">
+                My name is Deepakshi. I am a Electronics and Computer Emgineering Student. I like working on Frontend projects and Data Analysis.
+                This is a collection of all my projects. Feel free to look around and support my work if you like.
+            </p>
+        </div>
+        <a href="https://github.com/deepakshisud" class="btn" style="background:  rgb(255, 169, 183);">GitHub</a>
+        <a href="https://www.linkedin.com/in/deepakshi-sood-27b386174" class="btn" style="background:  rgb(255, 169, 183);">LinkedIn</a>
+        <a href="https://twitter.com/DeepakshiSud" class="btn" style="background:  rgb(255, 169, 183);">Twitter</a>
     </section>
     <section id="gallery">
         <div class="container">
