--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    <style>
-        .jumbotron{
-            background-image: url("");
-            background-position: center;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
     <title>Deepakshi's Resume</title>
   </head>
   <body>
@@ -26,7 +21,7 @@
         <h1 class="display-4">Hello There!</h1>
         <div class="container">
             <p class="lead">
-                My name is Deepakshi. I am a Electronics and Computer Emgineering Student. I like working on Frontend projects and Data Analysis.
+                My name is Deepakshi. I am a Electronics and Computer Engineering Student. I like working on Frontend projects and Data Analysis.
                 This is a collection of all my projects. Feel free to look around and support my work if you like.
             </p>
         </div>
@@ -36,45 +31,50 @@
     </section>
     <section id="gallery">
         <div class="container">
+            <h3 class="display text-center">Projects</h3>
+            <br>
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="" style="size: 200px;" alt="">
+                        <img class="card-img-top" src="https://github.com/deepakshisud/ArrowOS/raw/master/Images/StartPage.png" style="size: 200px;" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Chocolate</h5>
-                            <p class="card-text">Who doesnt love a good old chocolate cake? 
-                                We make it with love using any kind of chocolate you want. Right from 
-                                white to milk to dark!
+                            <h5 class="card-title">Arrow OS</h5>
+                            <p class="card-text">A command-line Operating System built in Visual Studios using
+                                Cosmos Development Kit.
+                                It consists of a File System and Calculator and can perform basic
+                                functionalities such as Reboot, display Date & Time, System Lock, and Softwares such as SnakeGame and Text Editor. 
                             </p>
-                            <a href="#" class="btn btn-outline-success btn-small">Show me!</a>
+                            <a href="https://github.com/deepakshisud/ArrowOS" class="btn btn-outline-success btn-small">Show me!</a>
                             <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=""  style="size: 200px;" alt="">
+                        <img class="card-img-top" src="https://github.com/deepakshisud/Arduino-Based-Multimeter/raw/master/Circuit.png"  style="size: 200px;" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Chocolate</h5>
-                            <p class="card-text">Who doesnt love a good old chocolate cake? 
-                                We make it with love using any kind of chocolate you want. Right from 
-                                white to milk to dark!
+                            <h5 class="card-title">Arduino Based Multimeter</h5>
+                            <p class="card-text">It is an integrated version of two types of meters. 
+                                The AVO meter for current, voltage and resistance and LC 
+                                meter is used to measure capacitance and resistance.IR remote is used to
+                                instruct which channel to execute. The output of each individual circuit is 
+                                displayed on the LCD screen.
                             </p>
-                            <a href="#" class="btn btn-outline-success btn-small">Show me!</a>
+                            <a href="https://github.com/deepakshisud/Arduino-Based-Multimeter" class="btn btn-outline-success btn-small">Show me!</a>
                             <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=""  style="size: 200px;"  alt="">
+                        <img class="card-img-top" src="https://github.com/deepakshisud/No-show-Paitent-analysis-/raw/master/Img/Age.png"  style="size: 200px;"  alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Chocolate</h5>
-                            <p class="card-text">Who doesnt love a good old chocolate cake? 
-                                We make it with love using any kind of chocolate you want. Right from 
-                                white to milk to dark!
+                            <h5 class="card-title">No-show Patient Analysis</h5>
+                            <p class="card-text">Predictive techniques used to develop
+                                and compare appointment no-show prediction models to better
+                                understand appointment adherence in general population.
                             </p>
-                            <a href="#" class="btn btn-outline-success btn-small">Show me!</a>
+                            <a href="https://github.com/deepakshisud/No-show-Paitent-analysis-" class="btn btn-outline-success btn-small">Show me!</a>
                             <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
                         </div>
                     </div>
