Personal info Added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Deepakshi's Resume</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background: rgb(255, 169, 183);">
+    <nav class="navbar navbar-light fixed-top" style="background: rgb(255, 169, 183);">
         <div class="container">
             <a href="#" class="navbar-brand"><i class="fas fa-laptop-code mr-2"></i>Home</a>
         </div>
@@ -29,10 +29,26 @@
         <a href="https://www.linkedin.com/in/deepakshi-sood-27b386174" class="btn" style="background:  rgb(255, 169, 183);">LinkedIn</a>
         <a href="https://twitter.com/DeepakshiSud" class="btn" style="background:  rgb(255, 169, 183);">Twitter</a>
     </section>
+    <section id="Personal Information">
+        <div class="container">
+            <h3 class="display text-center">About Me</h3>
+            <hr>
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="thumbnail">
+                        <div class="image image1"></div>
+                    </div>
+                </div>
+                <div class="col-lg-8 mb-4">
+
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="gallery">
         <div class="container">
             <h3 class="display text-center">Projects</h3>
-            <br>
+            <hr>
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="card">
