Personal info Added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
     <section id="Personal Information">
         <div class="container">
-            <h3 class="display text-center">About Me</h3>
+            <h3 class="text-center display">About Me</h3>
             <hr>
             <div class="row">
                 <div class="col-lg-4 mb-4">
@@ -40,7 +40,13 @@
                     </div>
                 </div>
                 <div class="col-lg-8 mb-4">
-
+                    <p class="about-me-para">
+                        I describe myself as an enthusiastic individual with a never-ending quench for learning. 
+                        I am intrigued by technology and enjoy working with new teams and always look for opportunities 
+                        to expand my knowledge. I am interested in Web Developement, SQL, PowerBI, Analytics, Competitive Programming, 
+                        Data Structures, Blogging. In my spare time, I like to read fictional novels. I am always up for a good women-empowerment 
+                        chat. I enjoy cooking delicious food and may open my cafe at some point.
+                    </p>
                 </div>
             </div>
         </div>
