Personal info added

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 This is a collection of all my projects. Feel free to look around and support my work if you like.
             </p>
         </div>
-        <a href="https://github.com/deepakshisud" class="btn" style="background:  rgb(255, 169, 183);">GitHub</a>
-        <a href="https://www.linkedin.com/in/deepakshi-sood-27b386174" class="btn" style="background:  rgb(255, 169, 183);">LinkedIn</a>
-        <a href="https://twitter.com/DeepakshiSud" class="btn" style="background:  rgb(255, 169, 183);">Twitter</a>
+        <a href="https://github.com/deepakshisud" class="btn links" style="background:  rgb(255, 169, 183);">GitHub</a>
+        <a href="https://www.linkedin.com/in/deepakshi-sood-27b386174" class="btn links" style="background:  rgb(255, 169, 183);">LinkedIn</a>
+        <a href="https://twitter.com/DeepakshiSud" class="btn links" style="background:  rgb(255, 169, 183);">Twitter</a>
     </section>
     <section id="Personal Information">
         <div class="container">
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 mb-4">
-                    <p class="about-me-para">
+                    <p class="about-me-para text-center">
                         I describe myself as an enthusiastic individual with a never-ending quench for learning. 
                         I am intrigued by technology and enjoy working with new teams and always look for opportunities 
                         to expand my knowledge. I am interested in Web Developement, SQL, PowerBI, Analytics, Competitive Programming, 
