--- a/index.html
+++ b/index.html
@@ -46,7 +46,49 @@
                         to expand my knowledge. I am interested in Web Developement, SQL, PowerBI, Analytics, Competitive Programming, 
                         Data Structures, Blogging. In my spare time, I like to read fictional novels. I am always up for a good women-empowerment 
                         chat. I enjoy cooking delicious food and may open my cafe at some point.
+                        <br>
+                        <br>
+                        <a href="https://drive.google.com/file/d/1Nu8nGefJbRmpy0lV7t2-JSCbi1nQajQy/view?usp=sharing" class="btn links" style="background:  rgb(255, 169, 183);">Resume</a>
                     </p>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Education">
+        <div class="container">
+            <h3 class="text-center display">Education</h3>
+            <hr>
+            <div class="row">
+                <div class="col-lg-6 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="https://lh3.googleusercontent.com/UwDE9J9ZBL6EAWDLxoRDox_M_6mdtW_skCjIvQeKtXLOS8bYGNYo5sk_EDDSCP1oZHRSkYWxovh9BwoMwBJ7zrbgIW3-O9UkCJAsWxbKrNXyjIkw92ejPkCwtATXqFAiY8VN1FNRjQNoBpE0ghRYXQ2wKx8I_3d5ErABQvFv5zoDjDQuHKpTw8rDLr4iddhCe_WSJbWe5stLUpEbxWhci2cq-aY5DNVmlOwtFGb2pJIwpLgrGwXHzInJaGYLTQdVmZ2laUBrTzm-cWwsuC4eUn_gIlzGLpA-3wy0wNJEeOivMEqkUpRIdZJnG-whlbGA_3bjyko9mO0S8m6LzUwDuB1bOna9Zplp1xqf_6v0H7qb66Pc58a9QI7UgKA9Bfrv6Sp9Bn03gE6QNQPDcok57xfOy7aH_eD018bW-vHGQkxmNp_M948G2Byh_r7dn5c3FE0MJUikHGrjrCnPsoINv2R_1Tswc0D3sLrgO2nDnBBfWk_MpBpAb9kRfl5gqz-FceJfXqW3Bg68Tzw1fs2_IoPKlBxWHfdqWnd9WDrC5_v7Kb33uJz8TCxivGkNcIlBnmmFQRymqvBLg3WK4Z5h3uZOPn5hqoiW0VLciroNyKcI5UMJP7rFNJpLskvXT5wh8X8YhqSlUC70N5C-jVBwqWXPtxUEoqnoeFx6Gx8wbAgV8sq-PUPgFyd9_tZ1PQ=s903-no?authuser=0" style="size: 10px;" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Mount Carmel Sr. Sec. School, Palampur</h5>
+                            <p class="card-text">I completed my high school with a score of 93.6% in Science Non Medical. I 
+                                was honored to be the Sports Captain and the Flag bearer for the school for the year 2017-18.
+                                I have participated in several inter-school and state level competitions like Inter-Mount Carmel
+                                and Dance Himachal Dance. 
+                            </p>
+                            <a href="http://palampur.mountcarmelschools.in/" class="btn btn-outline-success btn-small">Show me!</a>
+                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="" style="size: 10px;" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Vellore Institute of Technology, Chennai</h5>
+                            <p class="card-text">I completed my high school with a score of 93.6% in Science Non Medical. I 
+                                was honored to be the Sports Captain and the Flag bearer for the school for the year 2017-18.
+                                I have participated in several inter-school and state level competitions like Inter-Mount Carmel
+                                and Dance Himachal Dance. 
+                            </p>
+                            <a href="http://palampur.mountcarmelschools.in/" class="btn btn-outline-success btn-small">Show me!</a>
+                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </div>
