--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-light fixed-top" style="background: rgb(255, 169, 183);">
         <div class="container">
-            <a href="#" class="navbar-brand"><i class="fas fa-laptop-code mr-2"></i>Home</a>
+            <a href="#" class="navbar-brand">Created with &#9829;</a>
         </div>
     </nav>
     <section id="Header" class="jumbotron text-center">
@@ -28,6 +28,7 @@
         <a href="https://github.com/deepakshisud" class="btn links" style="background:  rgb(255, 169, 183);">GitHub</a>
         <a href="https://www.linkedin.com/in/deepakshi-sood-27b386174" class="btn links" style="background:  rgb(255, 169, 183);">LinkedIn</a>
         <a href="https://twitter.com/DeepakshiSud" class="btn links" style="background:  rgb(255, 169, 183);">Twitter</a>
+        <a href="https://medium.com/@deepakshisud" class="btn links" style="background:  rgb(255, 169, 183);">Medium</a>
     </section>
     <section id="Personal Information">
         <div class="container">
@@ -61,7 +62,7 @@
             <hr>
             <div class="row">
                 <div class="col-lg-6 mb-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <img class="card-img-top" src="https://lh3.googleusercontent.com/UwDE9J9ZBL6EAWDLxoRDox_M_6mdtW_skCjIvQeKtXLOS8bYGNYo5sk_EDDSCP1oZHRSkYWxovh9BwoMwBJ7zrbgIW3-O9UkCJAsWxbKrNXyjIkw92ejPkCwtATXqFAiY8VN1FNRjQNoBpE0ghRYXQ2wKx8I_3d5ErABQvFv5zoDjDQuHKpTw8rDLr4iddhCe_WSJbWe5stLUpEbxWhci2cq-aY5DNVmlOwtFGb2pJIwpLgrGwXHzInJaGYLTQdVmZ2laUBrTzm-cWwsuC4eUn_gIlzGLpA-3wy0wNJEeOivMEqkUpRIdZJnG-whlbGA_3bjyko9mO0S8m6LzUwDuB1bOna9Zplp1xqf_6v0H7qb66Pc58a9QI7UgKA9Bfrv6Sp9Bn03gE6QNQPDcok57xfOy7aH_eD018bW-vHGQkxmNp_M948G2Byh_r7dn5c3FE0MJUikHGrjrCnPsoINv2R_1Tswc0D3sLrgO2nDnBBfWk_MpBpAb9kRfl5gqz-FceJfXqW3Bg68Tzw1fs2_IoPKlBxWHfdqWnd9WDrC5_v7Kb33uJz8TCxivGkNcIlBnmmFQRymqvBLg3WK4Z5h3uZOPn5hqoiW0VLciroNyKcI5UMJP7rFNJpLskvXT5wh8X8YhqSlUC70N5C-jVBwqWXPtxUEoqnoeFx6Gx8wbAgV8sq-PUPgFyd9_tZ1PQ=s903-no?authuser=0" style="size: 10px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Mount Carmel Sr. Sec. School, Palampur</h5>
@@ -71,22 +72,21 @@
                                 and Dance Himachal Dance. 
                             </p>
                             <a href="http://palampur.mountcarmelschools.in/" class="btn btn-outline-success btn-small">Show me!</a>
-                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
-                    <div class="card">
-                        <img class="card-img-top" src="" style="size: 10px;" alt="">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="https://lh3.googleusercontent.com/lbNbfM22MJ_7-9r7Ry_3ijx6ZNI9QKah-Vy7-uFfxq4VpM67ETLRqaP-yhEAb_4Ff6pmSCVkGBxRGcjGMBgyN3VLHB2i9zzFYenVhIxXITHbIfahymvac5OkpM0k6zDIdHPGaP_RTfMOP6eK8DK7U4DXps2-8asffswxzOPCTHBH8fDRQeq8se7BC9FqCoa0Ual6gZZ4cWoyByaAjoRDM2g-v_MM4YtShcoDoPLq71Vc9gIWA3w4iQ2mfOml47T0C_4faxHBMJZ7ojOI52qybnXFvuF3yXBNtvW-uXmdgU_iRayV_0D-p0jxWmcDhsZfsNTQMIhtgp5fv4RzxBqJeoiMEayB-mEbz6pQYVDmTKT1H-F6AaeTpJGqykcigErRi9VS7SESX0rvq8XFVsdhr9KQPBIGcOM7G1yvGhdw_0_PoJIvikqHQG5Ab5ZCqwRE5YNXH1co4xeQaKB1PTYWvQaB5GZQ9B4Ct753WM3zVFE9hl4-0SFsw7UkInPiajPzlnvn0I5gy2C2rsVmkQxvnBXLIXtHYlOx_tuqdLr044kHFKtk6I-lYfIXtsCjNLAym73QHfkSdMBNLOwiOKkwPEBx6gqY-tVQCddjJXKFNqJzhn7Zl-PKHxE5i_HozQ6IGrSuV29vjyl5iy78xtCC7-_tRsh8xucN9iQM9-9s_4IBmtzlZ4hX_fidgOZ2rQ=w275-h183-no?authuser=0" style="size: 10px;" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Vellore Institute of Technology, Chennai</h5>
-                            <p class="card-text">I completed my high school with a score of 93.6% in Science Non Medical. I 
-                                was honored to be the Sports Captain and the Flag bearer for the school for the year 2017-18.
-                                I have participated in several inter-school and state level competitions like Inter-Mount Carmel
-                                and Dance Himachal Dance. 
+                            <p class="card-text">I am currently completing my bachelors in Electronics 
+                                and Computer Engineering. I currently have a CGPA of 9.47. I stand at 6th position
+                                in my branch. I have been a part clubs such as Drama club, Dance club and I am recently
+                                heading the "Microsoft Innovations Club". I have activly participated in in-campus and inter-college
+                                competitions such as Cyclathon, Street Nukkads, Marathons.
                             </p>
-                            <a href="http://palampur.mountcarmelschools.in/" class="btn btn-outline-success btn-small">Show me!</a>
-                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
+                            <a href="https://chennai.vit.ac.in/" class="btn btn-outline-success btn-small">Show me!</a>
                         </div>
                     </div>  
                 </div>
